tests/js_error/regexp/overflowing_quantifier_bound.exp
SyntaxError: Quantifier too large in regular expression
  ┌ tests/js_error/regexp/overflowing_quantifier_bound.js:1:4
  |
1 | /a{987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321987654321,9876543219876543219876543219876543219876543219876543219876543219876543219876543219876543219876543219876543210}/;
  |    ^